--- a/web/frontend/styles/Invoicetable.css
+++ b/web/frontend/styles/Invoicetable.css
@@ -277,3 +277,9 @@
   display: flex;
   gap: 10px;
 }
+.newRow__input._error .Polaris-TextField__Backdrop {
+  border: 2px solid red !important;
+}
+.Polaris-TextField__Backdrop:after {
+  content: none;
+}
