--- a/web/frontend/styles/NewInvoice.css
+++ b/web/frontend/styles/NewInvoice.css
@@ -69,6 +69,7 @@
   padding-bottom: 5px !important;
   position: relative !important;
 }
+
 .newInvoice__input.min .Polaris-TextField input::after {
   content: "days";
   position: absolute;
@@ -358,12 +359,73 @@
   align-items: flex-end;
 }
 
-.invActions__btn {
+.invActions__right button {
   width: max-content;
   background-color: #333;
   font-size: 12px;
   color: #fff;
   line-height: 1.4em;
+  transition: all 0.2s ease;
   padding: 15px 30px;
   text-transform: uppercase;
+}
+.invActions__right._disable button {
+  background: rgb(134, 134, 134);
+  pointer-events: none !important;
+}
+.invActions__right._disable button:hover {
+  background: rgb(134, 134, 134);
+}
+.invActions__right button:hover {
+  background: #6d27e7;
+  color: #fff;
+}
+
+.PolarisTextField2:focus {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+.PolarisTextField2 {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.Polaris-TextField--focus,
+.Polaris-TextField--focus input {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+input:focus-visible {
+  outline: 0 !important;
+  border: 0 !important;
+  box-shadow: none !important;
+}
+
+*:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.newInvoice__input .Polaris-TextField input,
+.inputTwice__area .Polaris-TextField input {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.Polaris-TextField .Polaris-TextField--focus {
+  border: none !important;
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+.newInvoice__input .Polaris-TextField input:focus-visible,
+.inputTwice__area .Polaris-TextField input:focus-visible {
+  outline: 0 !important;
+  border: 0 !important;
+  box-shadow: none !important;
 }
