--- a/web/frontend/styles/NewInvoice.css
+++ b/web/frontend/styles/NewInvoice.css
@@ -1,51 +1,63 @@
 .newInvoice {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 40px 30px 20px;
 }
-.newInvoice > .Polaris-Heading {
+.newInvoice__wrapper {
   width: 840px;
-  padding-left: 20px !important;
+  max-width: 100%;
 }
-.newInvoice > .Polaris-Heading {
+.newInvoice-newInvoiceTop {
+  min-height: 240px;
+  padding: 0px 0px 35px 0px;
+}
+.newInvoice.newClient
+  + #PolarisPortalsContainer
+  > div[data-portal-id="popover-Polarisportal1"]
+  > div:last-child::after {
+  content: "New Client";
+  position: absolute;
+  font-size: 12px;
+  top: calc(100% - 35px);
+  right: 15px;
+  color: #36038f;
+  font-weight: 600;
+}
+
+.newInvoice.newProduct
+  + #PolarisPortalsContainer
+  > div[data-portal-id="popover-Polarisportal5"]
+  > div:last-child::after {
+  content: "New Product";
+  position: absolute;
+  font-size: 12px;
+  top: calc(100% - 35px);
+  right: 15px;
+  color: #36038f;
+  font-weight: 600;
+}
+.newInvoice__wrapper > .Polaris-Heading {
   font-size: 24px;
   line-height: 32px;
   overflow: hidden;
   vertical-align: middle;
   white-space: nowrap;
   word-break: break-all;
-  padding: 0 0 45px 0;
-}
-.newInvoice-newInvoiceTop {
-  display: flex;
-  width: max-content;
-  align-items: flex-start;
-}
-.newInvoiceTop__left {
-  width: max-content;
+  padding: 0 0 35px 0;
 }
 .newInvoiceTop__right {
   display: flex;
-  min-width: 404px;
   width: auto;
   flex-direction: column;
   flex: 1 1 auto;
-  justify-content: flex-end;
 }
 .newInvoice__paddCase {
-  display: flex;
-  min-width: 25%;
-  flex-direction: column;
-  grid-gap: 15px;
-  padding: 0 35px 0 0;
   border-right: 1px solid rgb(223, 223, 223);
+  padding: 0px 35px 0px 0px;
 }
 .newInvoice__input > div:first-child {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 8px;
+  gap: 10px;
 }
 .newInvoice__input .Polaris-TextField__Backdrop {
   border-radius: 12px !important;
@@ -199,25 +211,13 @@
 .newInvoice__input.max input {
   width: 300px;
 }
-.newInvoice__papper {
-  width: max-content;
-  min-width: 404px;
-}
 .newInvoice__input.max .Polaris-Labelled__LabelWrapper {
   justify-content: flex-start;
 }
 .newInvoice__input.max .Polaris-Connected {
   width: auto !important;
 }
-
-.newInvoiceBody__left {
-  max-width: 100%;
-  height: 100%;
-}
 .newInvoice-newInvoiceBody {
-  display: flex;
-  align-items: flex-start;
-  padding: 55px 0 0 0;
   height: 0;
   overflow: hidden;
   transition: all 0.3s ease;
@@ -226,14 +226,6 @@
   height: 320px !important;
 }
 
-.newInvoiceBody__right .newInvoice__papper {
-  display: flex;
-  width: auto;
-  flex-direction: column;
-  flex: 1 1 auto;
-  gap: 15px;
-  justify-content: flex-end;
-}
 .newInvoice__input.start > div:first-child {
   justify-content: flex-end;
 }
@@ -263,117 +255,10 @@
 .invoice__select .Polaris-Select__Backdrop {
   border: 1px solid rgba(174, 180, 185, 1);
 }
-.newRow__table {
+/* .newRow__table {
   width: 920px;
-}
-.newRow__table table {
-  max-width: 99%;
-  border: none !important;
-  padding: 0 0 5px 5px;
-}
-.newRow__table table thead {
-  background: #fff;
-}
-.newRow__table table thead > tr > th:last-child {
-  display: none !important;
-}
-.newRow__table table thead > tr > th:first-child {
-  border-radius: 15px 0 0 0;
-  -webkit-border-radius: 15px 0 0 0;
-  -moz-border-radius: 15px 0 0 0;
-  -ms-border-radius: 15px 0 0 0;
-  -o-border-radius: 15px 0 0 0;
-  padding-left: 10px !important;
-}
-.newRow__table table thead > tr > th {
-  padding: 5px 0 5px 5px;
-}
-.newRow__table table thead > tr > th:nth-child(7) {
-  border-radius: 0 15px 0 0;
-  -webkit-border-radius: 0 15px 0 0;
-  -moz-border-radius: 0 15px 0 0;
-  -ms-border-radius: 0 15px 0 0;
-  -o-border-radius: 0 15px 0 0;
-}
-.newRow__table table tr input {
-  border: none !important;
-}
+} */
 
-.newRow__table
-  table
-  > tbody
-  > tr:last-child
-  > td:nth-child(2)
-  .Polaris-TextField__Backdrop {
-  border-radius: 0 0 0 20px !important;
-  -webkit-border-radius: 0 0 0 20px !important;
-  -moz-border-radius: 0 0 0 20px !important;
-  -ms-border-radius: 0 0 0 20px !important;
-  -o-border-radius: 0 0 0 20px !important;
-}
-.newRow__table
-  table
-  > tbody
-  > tr:last-child
-  > td:nth-child(8)
-  .Polaris-TextField__Backdrop {
-  border-radius: 0 0 20px 0 !important;
-  -webkit-border-radius: 0 0 20px 0 !important;
-  -moz-border-radius: 0 0 20px 0 !important;
-  -ms-border-radius: 0 0 20px 0 !important;
-  -o-border-radius: 0 0 20px 0 !important;
-}
-.newRow__table
-  td.Polaris-DataTable__Cell.Polaris-DataTable__Cell--verticalAlignTop.Polaris-DataTable__Cell--hovered {
-  border-bottom: 1px solid #cacaca !important;
-}
-.newRow__table
-  table
-  > tbody
-  td.Polaris-DataTable__Cell.Polaris-DataTable__Cell--verticalAlignTop.Polaris-DataTable__Cell--hovered:last-child {
-  border: none !important;
-}
-.newRow__table
-  td.Polaris-DataTable__Cell.Polaris-DataTable__Cell--verticalAlignTop.Polaris-DataTable__Cell--hovered
-  .Polaris-TextField__Backdrop {
-  background: #f1f1f1;
-}
-
-.newRow__table table tbody tr td,
-.newRow__table table tbody tr th {
-  padding: 0 0 3px 0 !important;
-}
-.newRow__table table tbody tr td {
-  border: none !important;
-  border-bottom: 1px solid #cacaca !important;
-}
-.newRow__table table tbody tr:last-child td {
-  border: none !important;
-}
-.newRow__table
-  table
-  tbody
-  tr:last-child
-  td.Polaris-DataTable__Cell.Polaris-DataTable__Cell--verticalAlignTop.Polaris-DataTable__Cell--hovered {
-  border-bottom: none !important;
-}
-
-.newRow__table
-  td.Polaris-DataTable__Cell.Polaris-DataTable__Cell--verticalAlignTop.Polaris-DataTable__Cell--hovered:nth-child(
-    2
-  ) {
-  border-left: 2px solid #6d27e7 !important;
-}
-.newRow__table table thead,
-.newRow__table table tbody {
-  border: none !important;
-}
-.newRow__table table thead tr th {
-  font-size: 13.8px;
-  font-weight: 600;
-  color: #333;
-  border: none;
-}
 .newRow__btn {
   background-color: #dedede;
   border-radius: 8px !important;
@@ -417,6 +302,8 @@
   justify-content: space-between;
   width: 280px;
   padding: 10px 0;
+}
+.newRow__line.border {
   border-bottom: 1px solid #cacaca;
 }
 .newRow__line span {
@@ -426,6 +313,9 @@
 }
 .newRow__line-title {
   font-weight: 600 !important;
+}
+.newRow__line-title.light {
+  font-weight: 400 !important;
 }
 .cancel-ic {
   width: 15px;
@@ -442,9 +332,6 @@
 }
 .newRow__table table tbody td:hover {
   border: none !important;
-}
-.newRow__table tbody th {
-  display: none !important;
 }
 .newRow__table tbody th,
 .newRow__table tbody td {
@@ -466,7 +353,6 @@
   opacity: 1;
 }
 .newInvoice__bottom {
-  width: 859px;
   padding-top: 35px;
 }
 .invActions__input {
@@ -589,7 +475,15 @@ input:focus-visible {
 }
 .dateSelect__datePicker {
   position: absolute;
-  right: -100%;
+  left: 110%;
+  z-index: 99;
+  top: 70% !important;
+  border-radius: 10px;
+  box-shadow: 0px 0px 17px 6px rgba(0, 0, 0, 0.16),
+    0px 3px 6px 0px rgba(0, 0, 0, 0.23);
+  overflow: hidden;
+  padding: 20px 0px;
+  background: #fff;
 }
 .dateSelect__datePicker .Polaris-DatePicker {
   background: #fff;
@@ -688,6 +582,23 @@ input:focus-visible {
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+.invoice__MainSelect-wrapper.simple button {
+  border: none;
+  background: transparent;
+  box-shadow: none;
+}
+.invoice__MainSelect-wrapper.simple button .Polaris-Button__Content {
+  display: flex;
+  justify-content: flex-end;
+  text-decoration: underline;
+  font-weight: 400;
+}
+.invoice__MainSelect-wrapper.simple
+  button
+  .Polaris-Button__Content
+  .Polaris-Icon {
+  display: none;
+}
 .Polaris-Popover__Pane.Polaris-Scrollable.Polaris-Scrollable--vertical.Polaris-Scrollable--hasBottomShadow.Polaris-Scrollable--verticalHasScrolling {
   overflow: auto !important;
 }
@@ -699,9 +610,6 @@ input:focus-visible {
   justify-content: flex-end;
   padding-top: 5px;
   color: red;
-}
-.changePaper__left {
-  min-width: 385px !important;
 }
 .invoice__MainSelect-label {
   color: #999;
