--- a/web/frontend/styles/NewInvoice.css
+++ b/web/frontend/styles/NewInvoice.css
@@ -2,12 +2,22 @@
   padding: 40px 30px 20px;
 }
 .newInvoice__wrapper {
-  width: 840px;
-  max-width: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
 }
 .newInvoice-newInvoiceTop {
   min-height: 240px;
   padding: 0px 0px 35px 0px;
+}
+.newInvoice__wrapper .Polaris-FormLayout__Item {
+  margin: 0;
+}
+.newInvoiceTop__paper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .newInvoice.newClient
   + #PolarisPortalsContainer
@@ -36,12 +46,14 @@
 }
 .newInvoice__wrapper > .Polaris-Heading {
   font-size: 24px;
+  margin: 0 auto;
+  width: 840px;
   line-height: 32px;
   overflow: hidden;
   vertical-align: middle;
   white-space: nowrap;
   word-break: break-all;
-  padding: 0 0 35px 0;
+  padding: 0 0 50px 0;
 }
 .newInvoiceTop__right {
   display: flex;
@@ -93,6 +105,9 @@
   -moz-border-radius: 12px;
   -ms-border-radius: 12px;
   -o-border-radius: 12px;
+}
+.inputTwice__area .Polaris-TextField__Spinner {
+  display: none;
 }
 .inputTwice__area .Polaris-Select__Backdrop:after {
   content: none;
@@ -199,11 +214,29 @@
   font-weight: 600;
   text-align: center;
   transition: all 0.2s ease;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
 }
+.form__defBtn button .Polaris-Button__Text {
+  display: flex;
+  align-items: center;
+}
+.form__defBtn-ic {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+}
+.form__defBtn-ic img {
+  object-fit: cover;
+  width: 14px;
+  height: 14px;
+  object-position: center;
+  transition: all 0.2s ease;
+}
+.form__defBtn-ic._active img {
+  transform-origin: center;
+  transform: rotate(180deg);
+}
+
 .newInvoice__input.max,
 .newInvoice__input.max > div:first-child {
   max-width: 400px !important;
@@ -295,7 +328,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  padding: 10px 5px 10px 5px;
+  padding: 10px 5px;
 }
 .newRow__line {
   display: flex;
@@ -347,7 +380,7 @@
   opacity: 0;
   transition: all 0.2s ease;
 }
-.newRow__table tbody td button:hover {
+.newRow__table tbody tr:hover td button {
   border: none !important;
   outline: none !important;
   opacity: 1;
@@ -362,6 +395,8 @@
   display: flex;
   justify-content: space-between;
   padding-top: 70px;
+  width: 840px;
+  margin: 0 auto;
 }
 .invActions__textArea {
   width: 280px;
@@ -390,7 +425,8 @@
 }
 
 .invActions__right button {
-  width: max-content;
+  min-width: 90px;
+  min-height: 60px;
   background-color: #6d27e7;
   font-size: 12px;
   color: #fff;
@@ -414,6 +450,9 @@
 .invActions__right button:hover {
   background: #36038f;
   color: #fff;
+}
+.invActions__right button svg {
+  fill: #fff !important;
 }
 
 .PolarisTextField2:focus {
@@ -539,13 +578,14 @@ input:focus-visible {
   justify-content: flex-end;
   gap: 10px;
 }
+.invoice__MainSelect-btn.discount button {
+  width: 80px;
+}
 .invoice__MainSelect > .invoice__MainSelect-wrapper.min {
   width: 240px;
-  /* height: 32px; */
 }
 .invoice__MainSelect > .invoice__MainSelect-wrapper.medium {
   width: 240px;
-  /* height: 32px; */
 }
 .invoice__MainSelect .Polaris-Select__Backdrop {
   border-radius: 12px !important;
@@ -592,6 +632,8 @@ input:focus-visible {
   justify-content: flex-end;
   text-decoration: underline;
   font-weight: 400;
+}
+.Polaris-ActionList {
 }
 .invoice__MainSelect-wrapper.simple
   button
