--- a/web/frontend/styles/NewInvoice.css
+++ b/web/frontend/styles/NewInvoice.css
@@ -354,6 +354,7 @@
   width: 15px;
 }
 .newRow__table table tr {
+  position: relative;
   border: none !important;
 }
 .newRow__table table .Polaris-TextField__Backdrop {
@@ -422,37 +423,6 @@
   display: flex;
   padding-top: 150px;
   align-items: flex-end;
-}
-
-.invActions__right button {
-  min-width: 90px;
-  min-height: 60px;
-  background-color: #6d27e7;
-  font-size: 12px;
-  color: #fff;
-  line-height: 1.4em;
-  transition: all 0.2s ease;
-  border-radius: 10px;
-  padding: 15px 30px;
-  text-transform: uppercase;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
-}
-.invActions__right._disable button {
-  background: rgb(134, 134, 134);
-  pointer-events: none !important;
-}
-.invActions__right._disable button:hover {
-  background: rgb(134, 134, 134);
-}
-.invActions__right button:hover {
-  background: #36038f;
-  color: #fff;
-}
-.invActions__right button svg {
-  fill: #fff !important;
 }
 
 .PolarisTextField2:focus {
@@ -578,8 +548,21 @@ input:focus-visible {
   justify-content: flex-end;
   gap: 10px;
 }
+.invoice__MainSelect-btn._disabled button {
+  background: #fff;
+  border-color: rgba(221, 224, 228, 1) !important;
+}
+.invoice__MainSelect-btn._disabled button .Polaris-Button__Text {
+  color: rgba(135, 144, 155, 1) !important;
+}
 .invoice__MainSelect-btn.discount button {
   width: 80px;
+}
+.invoice__MainSelect-btn .Polaris-Button__Text {
+  color: #999;
+}
+.invoice__MainSelect-btn .Polaris-Icon__Svg {
+  fill: #999;
 }
 .invoice__MainSelect > .invoice__MainSelect-wrapper.min {
   width: 240px;
@@ -617,10 +600,9 @@ input:focus-visible {
 .invoice__MainSelect-wrapper button {
   width: 100%;
   border-radius: 10px;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  -o-border-radius: 10px;
+}
+.invoice__MainSelect-wrapper button .Polaris-Button__Text {
+  color: rgba(31, 33, 36, 1) !important;
 }
 .invoice__MainSelect-wrapper.simple button {
   border: none;
@@ -632,8 +614,6 @@ input:focus-visible {
   justify-content: flex-end;
   text-decoration: underline;
   font-weight: 400;
-}
-.Polaris-ActionList {
 }
 .invoice__MainSelect-wrapper.simple
   button
@@ -658,7 +638,7 @@ input:focus-visible {
   display: block;
   font-size: 14px;
   line-height: 1.3em;
-  padding-left: 8px;
+  padding-left: 3px;
   padding-right: 8px;
   margin-top: 3px;
 }
