--- a/web/frontend/styles/NewCredit.css
+++ b/web/frontend/styles/NewCredit.css
@@ -17,7 +17,7 @@
 
 .newCredit-newCreditTop {
   min-height: 240px;
-  padding: 0px 0px 35px 0px;
+  /* padding: 0px 0px 35px 0px; */
 }
 .newCredit__bottom {
   padding-top: 35px;
